npm build script fix and ghpages script added

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && rm deployment.zip ; zip -r deployment.zip . -x '*node_modules/*' '.git/*'",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
