--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "react-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://riteshf.github.io/moving-average",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "1.1.5"
   },
   "scripts": {
